WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198790
'\u' should throw an early SyntaxError exception, but instead evaluates to 'u'
https://bugs.webkit.org/show_bug.cgi?id=198790
Summary
'\u' should throw an early SyntaxError exception, but instead evaluates to 'u'
Mathias Bynens
Reported
2019-06-12 08:37:25 PDT
$ eshost -se '"\u"' #### Chakra SyntaxError: Expected hexadecimal digit #### JavaScriptCore u #### SpiderMonkey SyntaxError: malformed Unicode character escape sequence: #### V8, V8 --harmony SyntaxError: Invalid Unicode escape sequence #### xs SyntaxError: invalid escape sequence
Attachments
Patch
(9.58 KB, patch)
2020-04-04 03:56 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
Patch
(10.59 KB, patch)
2020-04-04 08:13 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
Patch
(11.65 KB, patch)
2020-04-04 10:56 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2020-04-04 03:56:16 PDT
Created
attachment 395444
[details]
Patch
Alexey Shvayka
Comment 2
2020-04-04 08:13:41 PDT
Created
attachment 395448
[details]
Patch Adjust old Mozilla test.
Mark Lam
Comment 3
2020-04-04 09:35:25 PDT
Comment on
attachment 395448
[details]
Patch r- for now because a JSC test is still failing. Please check the other bots as well to make sure their failures are not related.
Alexey Shvayka
Comment 4
2020-04-04 10:56:55 PDT
Created
attachment 395458
[details]
Patch Array/15.4.5.1-1.js failures turned out to be related after all, adjust it.
Yusuke Suzuki
Comment 5
2020-04-04 12:33:04 PDT
Comment on
attachment 395458
[details]
Patch r=me
EWS
Comment 6
2020-04-04 12:36:37 PDT
Committed
r259536
: <
https://trac.webkit.org/changeset/259536
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395458
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-04-04 12:37:12 PDT
<
rdar://problem/61301054
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug