'\u' should throw an early SyntaxError exception, but instead evaluates to 'u' https://bugs.webkit.org/show_bug.cgi?id=198790

Reviewed by Yusuke Suzuki.

JSTests:

* mozilla/ecma/Array/15.4.5.1-1.js:
* mozilla/ecma/LexicalConventions/7.7.4.js:
* test262/expectations.yaml: Mark 4 test cases as passing.

Source/JavaScriptCore:

This change removes special-case for '\u', invoking parseUnicodeEscape() right away,
aligning string literals with ES6 template literals. parseComplexEscape() method
signature is greatly simplified, JSC is aligned with V8 and SpiderMonkey.

Grammar: https://tc39.es/ecma262/#prod-UnicodeEscapeSequence
(Hex4Digits or '{' is required, otherwise parsing fails)

* parser/Lexer.cpp:
(JSC::Lexer<T>::parseComplexEscape):
(JSC::Lexer<T>::parseStringSlowCase):
(JSC::Lexer<T>::parseTemplateLiteral):
* parser/Lexer.h:

LayoutTests:

* js/script-tests/unicode-escape-sequences.js:
* js/unicode-escape-sequences-expected.txt:


Canonical link: https://commits.webkit.org/222927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259536 268f45cc-cd09-0410-ab3c-d52691b4dbfc